# explainability-challenges

./: .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/image/: api.rst  image.rst
docs/source/structured/: api.rst  structured.rst
examples/: image_explainer_usage.ipynb  image_manipulator_usage.ipynb  structured_challenger_usage.ipynb  structured_manipulator_usage.ipynb
src/explainability-challenges/: manipulator.py
src/explainability/image/: image_attacks.py  image_explanations.py  utils.py
src/explainability/image/core/: image_manipulator.py
src/explainability/lib/: trace.py
src/explainability/structured/: structured_challenger.py  structured_manipulator.py
src/explainability/structured/core/: structured_challenger.py  structured_explainer.py  structured_manipulator.py
src/explainability/structured/samples/challengers/: categorize_challenger.py  replace_challenger.py
src/explainability/structured/samples/explainers/interpretml/: ebm_explainer.py  morris_explainer.py  pdp_explainer.py
src/explainability/ui/: image_attacks.py  image_explanations.py
src/explainability/ui/mysite/: settings.py  urls.py
src/explainability/ui/polls/: urls.py  views.py
src/explainability/ui/polls/migrations/: 0001_initial.py
src/explainability/ui/polls/templates/polls/: graphic.html  result.html
tests/test_image/: test_image_manipulator.py
tests/test_structured/: test_challenger.py  test_structured_challenger.py  test_structured_manipulator.py  test_structured_sample.py
